# LazymanTrading

./: .env  Cargo.toml  README.md
api/: config.json
src/: lib.rs  main.rs
src/core/: README.md  mod.rs  run.rs  types.rs  verify.rs
src/core/request/: convert.rs  funding.rs  mod.rs  spot_trading.rs  types.rs  verification.rs  wallet.rs
src/core/request/config/: header.rs  mod.rs  query.rs  signed_query.rs
src/models/: api.rs  token.rs
src/modules/: README.md  mod.rs
src/modules/env/: load.rs  mod.rs
src/modules/hmac/: sha256.rs
src/modules/json/: create.rs  mod.rs  read.rs
src/modules/rest/: delete.rs  get.rs  mod.rs  post.rs  put.rs
src/runtime/: README.md  functions.rs  macros.rs  mod.rs
token/: XRP.json  bnb.json  params.json
