[package]
name = "lazyman_trading"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.12.0"
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.23", features = [
    "rustls-tls",
    "json",
], default-features = false }
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serde_json = "1.0.142"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
], default-features = false }
